# Hands-on-MLIR

./: .clang-format  .clangd  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  README_OLD.md  lsan.supp  requirements.txt  ubsan.supp
cmake/: CMakeLists.txt  check_simd.cmake
example/CpuGEMM/: README.md  naive.mlir  run.sh
examples/CPU_GEMM/: README.md  a.mlir  naive.mlir  run.sh
examples/CpuGEMM/: naive.mlir  run.sh
examples/Utils/: run.sh
examples/bert/: convert_hf.py
examples/contants2memref/: stablehlo.mlir
examples/cpu_gemm/: matmul.mlir  run.sh
examples/gelu/: generate_gelu.py
examples/layernorm/: generate_layernorm.py
examples/linear/: .gitignore  run.sh  test.cpp  test.py  tosa.mlir
examples/mlir/cpu_gemm/: matmul.mlir  naive.mlir
examples/shared_library/: run.sh  test.cpp  use_so.mlir
examples/softmax/: generate_softmax.py
examples/torch/: .gitignore  benchmark.py
examples/torch/bert/: benchmark.py  benchmark_bert.py  bert.cu  compile.sh  convert_hf.py  modify_for_iree.py  parse_hom.py  parse_iree.py  run.sh  run_hom.sh  run_iree.sh
examples/torch/bert_attention/: bert_attention.py  bert_attn.cu  bert_self_attention.py  bert_self_attn.cu  cuSeqLen.cu  run_bert_attn.sh  run_bert_self_attn.sh  run_cuseqlen.sh
examples/torch/elementwise/: add.cu  add.py  run_add.sh
examples/torch/gelu/: generate_gelu.py
examples/torch/layernorm/: generate_layernorm.py
examples/torch/layernorm/cuda/: gemm_with_mean_var.cu  layernorm.cu  layernorm.py  ln_gemm.cu  run.sh  verify.py
examples/torch/linear/: linear.py  run.cpp  run.sh  test.cpp  test.py
examples/torch/linear/cuda/: a.cu  b.cu  c.cu  linear.py  linear_test.py  run.cu  run.sh  run_fp16.cu  run_fp16.sh  run_hom.sh  run_iree.sh
examples/torch/softmax/: generate_softmax.py
examples/utils/: fill_and_print.mlir  run.sh
include/: CMakeLists.txt  InitAllDialects.h  InitAllPasses.h  Utils.pdll  half.h
include/Conversions/: CMakeLists.txt
include/Conversions/FP32toFP16/: CMakeLists.txt  FP32toFP16.pdll  Passes.h  Passes.td
include/Conversions/Function/: CMakeLists.txt  FunctionCallUtils.h  FunctionUtils.h  Passes.h  Passes.td
include/Conversions/HOM/: CMakeLists.txt  HOMToHOMNVGPU.pdll  Passes.h  Passes.td
include/Conversions/MatMulCPUOptimize/: Passes.h
include/Conversions/Stablehlo/: CMakeLists.txt  Passes.h  Passes.td  StablehloToHOM.pdll
include/Conversions/Stablehlo/Transforms/: CMakeLists.txt  Passes.h  StablehloToHOM.cpp
include/Conversions/Tosa/: CMakeLists.txt  Passes.h  Passes.td  TosaToHOM.pdll
include/Conversions/Tosa/Transforms/: CMakeLists.txt  Passes.h  Passes.td  TosaToHOM.pdll
include/Dialect/: CMakeLists.txt
include/Dialect/CpuGemm/IR/: CGOps.h  CGOps.td  CMakeLists.txt
include/Dialect/CpuGemm/Transforms/: CGTransforms.td  CMakeLists.txt
include/Dialect/HOM/: CMakeLists.txt  HOMFusion.pdll  HOMOps.h  HOMOps.td  HOMTypesBase.td  Passes.h  Passes.td
include/Dialect/HOMNVGPU/: CMakeLists.txt  HOMNVGPUAutotune.pdll  HOMNVGPUFusion.pdll  HOMNVGPULegalizeGemm.pdll  HOMNVGPUOps.h  HOMNVGPUOps.td  Passes.h  Passes.td
include/ExecutionEngine/: ExecutionEngine.h  HandsOnNVGPURunnerUtils.h  HandsOnRunnerUtils.h  KernelCaller.h
include/Kernels/: CAPI.h  Matmul.h
include/NVGPUKernels/: BertAttentionRunner.h  CuSeqLen.h  ElementwiseRunner.h  GatherRunner.h  GemmManifest.h  GemmProfiler.h  GemmRunner.h  Layernorm.h  LayernormGemmRunner.h  OperationRunner.h  Utils.h  betterCuSeqLen.h  gemm_with_epilogue_visitor.h
include/WeightsEngine/: Utils.h  WeightsEngine.h
lib/: CMakeLists.txt
lib/Conversion/: CMakeLists.txt
lib/Conversion/ConstantToMemref/: ConstantToMemref.cpp
lib/Conversion/MatMulCPUOptimize/: CMakeLists.txt  MatMulCPUOptimize.cpp
lib/Conversions/: CMakeLists.txt
lib/Conversions/ConstantToMemref/: CMakeLists.txt
lib/Conversions/FP32toFP16/: CMakeLists.txt  FP32ToFP16.cpp
lib/Conversions/Function/: CMakeLists.txt  ExtractInitFunc.cpp  FunctionCallUtils.cpp  FunctionUtils.cpp  HOMNVGPUToFunc.cpp  HOMToFunc.cpp  OptimizeMemory.cpp  UnifyLLVMFuncInterface.cpp
lib/Conversions/HOM/: CMakeLists.txt  HOMToHOMNVGPU.cpp
lib/Conversions/MatMulCPUOptimize/: CMakeLists.txt  MatMulCPUOptimize.cpp
lib/Conversions/Stablehlo/Transforms/: CMakeLists.txt  StablehloToHOM.cpp
lib/Conversions/Tosa/: CMakeLists.txt  TosaConstantFolding.cpp  TosaToHOM.cpp
lib/Conversions/Tosa/Transforms/: CMakeLists.txt  TosaToHOM.cpp
lib/Dialect/CpuGemm/: CMakeLists.txt
lib/Dialect/CpuGemm/IR/: CGOps.cpp
lib/Dialect/HOM/: CMakeLists.txt  HOMFusionPass.cpp  HOMOps.cpp  HOMSerializeWeight.cpp  Passes.cpp
lib/Dialect/HOMNVGPU/: CMakeLists.txt  HOMNVGPUAutotunePass.cpp  HOMNVGPUFusionPass.cpp  HOMNVGPULegalizeGemmPass.cpp  HOMNVGPUOps.cpp
lib/ExecutionEngine/: CutlassCAPI.cu  ExecutionEngine.cpp  HandsOnNVGPURunnerUtils.cu  HandsOnRunnerUtils.cpp
lib/Kernels/: CAPI.cpp  CMakeLists.txt  Matmul.cu
lib/NVGPUKernels/: CMakeLists.txt  GemmManifest.cu  GemmProfiler.cu  GemmRunner.cu
lib/WeightsEngine/: CMakeLists.txt  WeightsEngine.cpp
python/: gemm_generator.py  hom_manifest.py
tools/: CMakeLists.txt
tools/hands-on-opt/: CMakeLists.txt  hands-on-opt.cpp
